# svitovyd

./: .gitignore  README.md  paper.md  pyproject.toml
svitovyd/: __init__.py  cli.py  indexer.py  mcp_server.py  query.py  ui.py
tests/: test_indexer.py  test_query.py
