[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "svitovyd"
version = "0.1.2"
description = "Project map builder and structural query tool — index, find, trace, deps, idiff"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/szholobetsky/svitovyd"
Repository = "https://github.com/szholobetsky/svitovyd"

[project.optional-dependencies]
mcp  = ["mcp>=1.0"]
http = ["mcp>=1.0", "uvicorn>=0.24"]
ui   = ["gradio>=4.0"]

[project.scripts]
svitovyd     = "svitovyd.cli:main"
svitovyd-mcp = "svitovyd.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["svitovyd*"]
